<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SVG-Edit</string>
    <string name="app_ver_name">SVG-Edit v0.5 beta (M2)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_file">Nowy plik</string>
    <string name="open_file">Otwórz plik</string>
    <string name="options">Opcje</string>
    <string name="close">Zakończ</string>
    <string name="save">Zapisz</string>
    
    
    <string name="choose_engine">Wybierz silnik renderowania SVG:</string>
    <string name="webkit">WebKit (WebView)</string>
    <string name="svgand">SVG-Android</string>
    <string name="svgand2">SVG-Android 2 (enhanced)</string>
    <string name="andsvg">AndroidSVG</string>
    <string name="tpsvg">TP SVG</string>

</resources>
